objects/LBI__RecommendationOpportunitySummary__c.object
<CustomObject>
    <fields>
        <fullName>LBI__ClosedDeleted__c</fullName>
        <label>Closed (Deleted)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Closed__c</fullName>
        <label>Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__ConvertedDeleted__c</fullName>
        <label>Converted (Deleted)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Converted__c</fullName>
        <label>Converted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__InProcess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__OpportunityStageName__c</fullName>
        <label>Opportunity Stage Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayName__c</fullName>
        <formula>LBI__PlayRun__r.LBI__Play__r.LBI__DisplayName__c</formula>
        <label>Play Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayRunName__c</fullName>
        <formula>LBI__PlayRun__r.LBI__PlayName__c</formula>
        <label>Play Run Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayRun__c</fullName>
        <label>Play Run</label>
        <referenceTo>LBI__PlayRun__c</referenceTo>
        <relationshipLabel>Recommendation Opportunity Summaries</relationshipLabel>
        <relationshipName>Recommendation_Opportunity_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__PlayTypeName__c</fullName>
        <formula>LBI__PlayRun__r.LBI__Play__r.LBI__PlayType__r.LBI__PlayTypeName__c</formula>
        <label>Play Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayType__c</fullName>
        <formula>LBI__PlayRun__r.LBI__Play__r.LBI__PlayType__c</formula>
        <label>Play Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Play__c</fullName>
        <formula>LBI__PlayRun__r.LBI__Play__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Play</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Rank__c</fullName>
        <label>Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RunDateAge__c</fullName>
        <description>How old is the Play Run (in Days)</description>
        <formula>TODAY() - DATEVALUE(LBI__PlayRun__r.LBI__RunDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How old is the Play Run (in Days)</inlineHelpText>
        <label>RunDateAge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__TotalDeleted__c</fullName>
        <label>Total (Deleted)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__TotalPipelineAmountDeleted__c</fullName>
        <label>Total Pipeline Amount (Deleted)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LBI__TotalPipelineAmount__c</fullName>
        <label>Total Pipeline Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LBI__Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__UniqueIdentifier__c</fullName>
        <formula>casesafeid(LBI__PlayRun__c) &amp; &apos;-&apos; &amp; LBI__Rank__c &amp; &apos;-&apos; &amp; LBI__OpportunityStageName__c</formula>
        <label>Unique Identifier</label>
        <type>Text</type>
    </fields>
    <label>Recommendation Opportunity Summary</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__PlayRun__c</columns>
        <columns>LBI__OpportunityStageName__c</columns>
        <columns>LBI__Rank__c</columns>
        <columns>LBI__Total__c</columns>
        <columns>LBI__Converted__c</columns>
        <columns>LBI__TotalPipelineAmount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ROS-{000000}</displayFormat>
        <label>Recommendation Opportunity Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendation Opportunity Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>